# rustler

./: Cargo.toml  CraneoDAE.dae  cube.dae
examples/print_blend/: output_BASEmodel.blend.txt
res/: color_monkeh.dae  color_monkeh_2.dae  ico.dae  monkey.dae  shape.dae  spiky.dae  untitled.dae  world.dae
src/: main.rs
src/graphics/: animation.rs  collada.rs  color.rs  math.rs  mesh.rs  mod.rs  renderable.rs  shader.rs  texture.rs  vertex.rs  view.rs  window.rs
src/util/: entity.rs  event.rs  mod.rs  time.rs
