[package]
name = "rustler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collada = "0.15.0"
dae-parser = "0.10.0"
gl = "0.14.0"
glm = "0.2.3"
glutin = "0.31.2"
glutin-winit = "0.4.2"
image = "0.24.8"
rand = "0.8.5"
raw-window-handle = "0.5.0"
winit = "0.29.9"
